[package]
name = "radiotap"
version = "0.1.0"
authors = ["Kirill Vainer"]
license = "GPL-3.0-or-later"
keywords = ["radiotap", "wifi", "802.11", "wlan", "pcap"]
description = """
Write and read radiotap (802.11) headers using Rust
"""

[dependencies]
bitflags = "1"
byteorder = "1"
lazy_static = "1"

[dev-dependencies]
pcap = "0.7"
hex = "0.3"
